tests/incremental_identical_dep/incremental_identical_dep.exp
Error ------------------------------------------------------------------------------------------------------ thud.js:3:1

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   thud.js:3:1
   3| x as string;
      ^

References:
   foo.js:2:16
   2| export default 0
                     ^ [1]
   thud.js:3:6
   3| x as string;
           ^^^^^^ [2]



Found 1 error
Error ------------------------------------------------------------------------------------------------------ thud.js:3:1

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   thud.js:3:1
   3| x as string;
      ^

References:
   bar.js:2:16
   2| export default 0
                     ^ [1]
   thud.js:3:6
   3| x as string;
           ^^^^^^ [2]



Found 1 error
